# Sparky

./: .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  README.MD  vcpkg.json
inc/states/: GLTriangle.hpp
lib/: CMakeLists.txt
src/: main.cpp
src/states/: GLTriangle.cpp
